[gd_scene load_steps=3 format=3 uid="uid://1wrq7b507kx4"]

[ext_resource type="Script" path="res://modules/dup_builder/dup_builder.gd" id="1_0jrmq"]
[ext_resource type="PackedScene" uid="uid://dk046gnwuaxay" path="res://lib/path_browser.tscn" id="2_kmmxw"]

[node name="DuplicateBuilder" type="Node2D"]
script = ExtResource("1_0jrmq")

[node name="Builder" type="Window" parent="."]
title = "Duplicate Builder"
initial_position = 1
size = Vector2i(450, 450)
visible = false
unresizable = true

[node name="Count" type="TextEdit" parent="Builder"]
offset_right = 192.0
offset_bottom = 32.0
tooltip_text = "Number of duplicates"
placeholder_text = "Count"

[node name="ResBrowser" parent="Builder" instance=ExtResource("2_kmmxw")]
position = Vector2(0, 40)

[node name="Builder" type="CheckButton" parent="Builder"]
offset_left = 192.0
offset_right = 296.0
offset_bottom = 31.0
text = "Builder"

[node name="View" type="CheckButton" parent="Builder"]
offset_left = 304.0
offset_right = 416.0
offset_bottom = 31.0
text = "Preview"

[node name="Node2D" type="Node2D" parent="."]

[connection signal="close_requested" from="Builder" to="." method="_on_builder_close_requested"]
[connection signal="hook" from="Builder/ResBrowser" to="." method="_on_res_browser_hook"]
[connection signal="toggled" from="Builder/Builder" to="." method="_on_builder_toggled"]
[connection signal="toggled" from="Builder/View" to="." method="_on_view_toggled"]
